{"message":"Update file: 2023-08-30-post-RSAF2023.md","fileName":"2023-08-30-post-RSAF2023.md","userId":"1172"}

--- a/saps/highlights/_posts/2023-08-30-post-RSAF2023.md
+++ b/saps/highlights/_posts/2023-08-30-post-RSAF2023.md
@@ -11,3 +11,5 @@ As part of The Republic of Singapore Air Force (RSAF) 55th Anniversary, we were 
 Our P4 to P6 Anthonians, on the other hand, had a sharing via Zoom by Entrepreneur and ex-Anthonian, Ms Stephanie Goh. Our older Anthonians had an authentic interaction with Ms Goh regarding her business and how a growth mindset was essential in her journey.
 
 Look out for more differentiated Assembly Programmes at SAPS!
+
+![](/images/rsaf2023.jpg)
