--- a/saps/highlights/_posts/2023-08-30-post-RSAF2023.md
+++ b/saps/highlights/_posts/2023-08-30-post-RSAF2023.md
@@ -5,6 +5,7 @@ date: 2023-08-30
 layout: post
 description: ""
 image: ""
+variant: markdown
 ---
 As part of The Republic of Singapore Air Force (RSAF) 55th Anniversary, we were privileged to have RSAF airmen on 30 August to introduce a specially RSAF commissioned book titled "Wings of Our Own" to our P1 to P3 Anthonians. Our Anthonians were awed by the storytelling session and much excitement was generated during the paper plane flying competition.
 
@@ -12,4 +13,4 @@ Our P4 to P6 Anthonians, on the other hand, had a sharing via Zoom by Entreprene
 
 Look out for more differentiated Assembly Programmes at SAPS!
 
-![](/images/rsaf2023.jpg)
+![](/images/2023/rsaf2023.jpg)
