--- a/saps/announcements/_posts/2025-06-24-post-SAPS Tour 2025.md
+++ b/saps/announcements/_posts/2025-06-24-post-SAPS Tour 2025.md
@@ -7,3 +7,8 @@ description: ""
 image: /images/SAPS_POSTER_2025.jpg
 variant: tiptap
 ---
+<p></p>
+<div class="isomer-image-wrapper">
+<img style="width: 100%" height="auto" width="100%" alt="" src="/images/SAPS_POSTER_2025.jpg">
+</div>
+<p></p>
