{"message":"Update file: 2025-06-24-post-SAPS Tour 2025.md","userId":"1194","fileName":"2025-06-24-post-SAPS Tour 2025.md"}

--- a/saps/announcements/_posts/2025-06-24-post-SAPS Tour 2025.md
+++ b/saps/announcements/_posts/2025-06-24-post-SAPS Tour 2025.md
@@ -11,4 +11,5 @@ variant: tiptap
 <div class="isomer-image-wrapper">
 <img style="width: 100%" height="auto" width="100%" alt="" src="/images/SAPS_POSTER_2025.jpg">
 </div>
-<p></p>
+<p>or click this link &gt; <a href="https://cal.gov.sg/bgkniaohr93xootn31zrxrwg" rel="noopener noreferrer nofollow" target="_blank">https://cal.gov.sg/bgkniaohr93xootn31zrxrwg</a>
+</p>
